--- a/mybb-music.css
+++ b/mybb-music.css
@@ -3,11 +3,11 @@
 Автор - грандоченька смерти @ https://github.io/eugpoloz/mybb-music
 */
 
-.audio-popup {
+#post .container.audio-popup {
   position: absolute;
   top: auto;
   right: 1.4em;
-  width: 350 px;
+  width: 350px;
   margin-top: 2.05em;
   background-color: white;
   border: 3px solid white;
@@ -15,15 +15,15 @@
   z-index: -1;
 }
 
-.audio-popup__input {
-	display: block;
-	width: 100%;
-	margin: 1em 0;
-	padding: 0.5em;
-	box-sizing: border-box;
+#post input.audio-popup__input {
+  display: block;
+  width: 100%;
+  margin: 1em 0;
+  padding: 0.5em;
+  box-sizing: border-box;
 }
 
 .audio-popup__btn {
-	font-weight: 700;
-	text-transform: uppercase;
+  font-weight: 700;
+  text-transform: uppercase;
 }
