change release version and stuff

--- a/mybb-music.css
+++ b/mybb-music.css
@@ -1,5 +1,4 @@
-/* ВСТАВКА МУЗЫКИ И ПЛЕЙЛИСТОВ С ЯНДЕКС.МУЗЫКИ, ПРОСТОПЛЕЕРА И ZIPPYSHARE
-Версия 1.0 (3.0), часть 2 - стили
+/* mybb-music v1.0.0
 Автор - грандоченька смерти @ https://github.io/eugpoloz/mybb-music
 */
 
